fixed alignment

--- a/app/assets/stylesheets/products/_edit.scss
+++ b/app/assets/stylesheets/products/_edit.scss
@@ -2,7 +2,8 @@
   // padding: 50px;
   font-family: $app-font;
   font-size: large;
-  height: calc(100vh - 5rem);
+  // height: calc(100vh - 5rem);
+  height: 100vh;
 
   .card-whole {
     color: white;
